# Textbook-Mapping-Assistant

./: .gitignore  README.md  main.py  pyproject.toml  readme-ai.md
frontend/: index.html
rag_pipeline/: notebook1.ipynb
