[project]
name = "textbook-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.1",
    "fastapi>=0.124.4",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.5",
    "pymupdf>=1.26.7",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.38.0",
]
